pa2/solutions/Quinton_Miller-Jack_Boening/y.output
Nonterminals useless in grammar

   exps_seq
   arith


Terminals unused in grammar

   ABSTRACT
   ALIGNOF
   AS
   BE
   BREAK
   CONST
   CONTINUE
   CRATE
   DO
   EXTERN
   FALSE
   FINAL
   FOR
   IMPL
   IN
   MACRO
   MACRO_RULES
   MOD
   MOVE
   OFFSETOF
   OVERRIDE
   PRIV
   PUB
   PURE
   SIZEOF
   STATIC
   SELF
   SUPER
   TRUE
   TRAIT
   TYPE
   TYPEOF
   UNSAFE
   UNSIZED
   USE
   VIRTUAL
   WHERE
   YIELD
   USIZE
   ISIZE
   POUND
   POUNDEXCLAMATION
   APOSTRAPHE
   DOLLAR
   EXCLUSIVEOR
   LEFTSHIFT
   RIGHTSHIFT
   WILDCARD
   THREEDOTS
   EXCLUSIVEOREQUAL
   LEFTSHIFTEQUAL
   RIGHTSHIFTEQUAL
   UNKNOWN


Rules useless in grammar

  199 exps_seq: exps
  200         | %empty


State 6 conflicts: 1 reduce/reduce
State 63 conflicts: 1 shift/reduce
State 84 conflicts: 1 shift/reduce
State 94 conflicts: 2 reduce/reduce
State 101 conflicts: 1 shift/reduce, 1 reduce/reduce
State 109 conflicts: 1 shift/reduce
State 125 conflicts: 1 shift/reduce
State 126 conflicts: 2 shift/reduce
State 129 conflicts: 1 shift/reduce
State 134 conflicts: 2 shift/reduce
State 172 conflicts: 1 shift/reduce
State 174 conflicts: 16 shift/reduce, 2 reduce/reduce
State 176 conflicts: 1 shift/reduce
State 187 conflicts: 1 shift/reduce
State 190 conflicts: 1 shift/reduce
State 191 conflicts: 1 shift/reduce
State 196 conflicts: 1 shift/reduce
State 202 conflicts: 10 reduce/reduce
State 207 conflicts: 1 shift/reduce, 1 reduce/reduce
State 208 conflicts: 1 shift/reduce
State 209 conflicts: 16 shift/reduce
State 210 conflicts: 16 shift/reduce
State 211 conflicts: 16 shift/reduce
State 212 conflicts: 16 shift/reduce
State 213 conflicts: 16 shift/reduce
State 214 conflicts: 16 shift/reduce
State 215 conflicts: 16 shift/reduce
State 216 conflicts: 16 shift/reduce
State 218 conflicts: 1 shift/reduce
State 219 conflicts: 1 shift/reduce
State 220 conflicts: 1 shift/reduce
State 221 conflicts: 1 shift/reduce
State 222 conflicts: 1 shift/reduce
State 223 conflicts: 1 shift/reduce
State 224 conflicts: 1 shift/reduce
State 225 conflicts: 1 shift/reduce
State 226 conflicts: 1 shift/reduce
State 227 conflicts: 1 shift/reduce
State 228 conflicts: 1 shift/reduce
State 229 conflicts: 1 shift/reduce
State 230 conflicts: 1 shift/reduce
State 235 conflicts: 10 shift/reduce
State 236 conflicts: 1 shift/reduce
State 242 conflicts: 1 shift/reduce
State 246 conflicts: 1 shift/reduce
State 253 conflicts: 10 shift/reduce
State 254 conflicts: 10 shift/reduce
State 255 conflicts: 10 shift/reduce
State 256 conflicts: 10 shift/reduce
State 257 conflicts: 10 shift/reduce
State 258 conflicts: 10 shift/reduce
State 259 conflicts: 10 shift/reduce
State 260 conflicts: 10 shift/reduce
State 262 conflicts: 10 reduce/reduce
State 263 conflicts: 10 reduce/reduce
State 264 conflicts: 10 reduce/reduce
State 265 conflicts: 10 reduce/reduce
State 266 conflicts: 10 reduce/reduce
State 267 conflicts: 10 reduce/reduce
State 268 conflicts: 10 reduce/reduce
State 269 conflicts: 10 reduce/reduce
State 270 conflicts: 10 reduce/reduce
State 271 conflicts: 10 reduce/reduce
State 272 conflicts: 10 reduce/reduce
State 273 conflicts: 10 reduce/reduce
State 274 conflicts: 10 reduce/reduce
State 289 conflicts: 1 shift/reduce
State 300 conflicts: 2 shift/reduce
State 307 conflicts: 1 shift/reduce


Grammar

    0 $accept: crate $end

    1 crate: items

    2 items: item items
    3      | item
    4      | %empty

    5 item: function
    6     | struct
    7     | enum

    8 stmts: stmt SEMICOLON stmts
    9      | stmt
   10      | %empty

   11 stmt: return
   12     | exp
   13     | let
   14     | function

   15 exps: exp COMMA exps
   16     | exp

   17 exp: LPAREN exp RPAREN
   18    | arith1
   19    | loop
   20    | while
   21    | box_new
   22    | if
   23    | match
   24    | arg_struct
   25    | assign
   26    | arr
   27    | arr_index
   28    | unit
   29    | %empty

   30 arith1: add
   31       | sub
   32       | arith2

   33 arith2: mul
   34       | div
   35       | mod
   36       | neg
   37       | arith3

   38 arith3: LPAREN arith1 RPAREN
   39       | fn_call
   40       | comp
   41       | field_lookup
   42       | arith4

   43 arith4: id
   44       | ptr
   45       | lit

   46 add: arith1 ADD arith1

   47 sub: arith1 SUB arith1

   48 mul: arith1 MUL arith1

   49 div: arith1 DIV arith1

   50 mod: arith1 MODOP arith1

   51 neg: SUB arith4

   52 comp: lt
   53     | leq
   54     | gt
   55     | geq
   56     | eq
   57     | neq
   58     | or
   59     | and
   60     | not

   61 lt: arith1 LESSTHAN arith1

   62 leq: arith1 LESSTHANOREQUAL arith1

   63 gt: arith1 GREATERTHAN arith1

   64 geq: arith1 GREATERTHANOREQUAL arith1

   65 eq: arith1 EQUALTO arith1

   66 neq: arith1 NOTEQUAL arith1

   67 or: arith1 LOGICALOR arith1

   68 and: arith1 LOGICALAND arith1

   69 not: NOT arith1

   70 ptr: addr
   71    | deref
   72    | addr_of_mut

   73 addr: AND arith4
   74     | AND neg

   75 deref: MUL arith4
   76      | MUL neg

   77 addr_of_mut: AND MUT arith4
   78            | AND MUT neg

   79 unit: LPAREN RPAREN

   80 assign: exp EQU exp
   81       | exp PLUSEQUAL exp
   82       | exp SUBEQUAL exp
   83       | exp DIVEQUAL exp
   84       | exp TIMESEQUAL exp
   85       | exp MODEQUAL exp
   86       | exp ANDEQUAL exp
   87       | exp OREQUAL exp

   88 let: LET pat COLON type EQU exp
   89    | LET pat COLON type
   90    | LET pat EQU exp
   91    | LET pat

   92 field_lookup: exp PERIOD id

   93 while: WHILE LPAREN exp RPAREN block

   94 loop: LOOP block

   95 if: IF LPAREN exp RPAREN block
   96   | if ELSE block

   97 match: MATCH LPAREN exp RPAREN LSQUIGBRACKET match_arms RSQUIGBRACKET

   98 match_arms: match_arm COMMA match_arms
   99           | match_arm

  100 match_arm: match_pats PIPE block

  101 match_pats: pat OR match_pats
  102           | pat

  103 pats: pat COMMA pats
  104     | pat

  105 pat: p_lit
  106    | LPAREN RPAREN
  107    | WC
  108    | SUB p_lit
  109    | id
  110    | REF id
  111    | REF MUT id
  112    | MUT id
  113    | AND pat
  114    | pat_arr
  115    | pat_enum
  116    | pat_struct

  117 pat_arr: LBRACKET pats RBRACKET

  118 pat_struct: id LSQUIGBRACKET pat_fields RSQUIGBRACKET

  119 pat_fields: pat_field COMMA pat_fields
  120           | pat_field

  121 pat_field: id COLON pat

  122 arr: LBRACKET exps RBRACKET

  123 arr_index: exp LBRACKET exp RBRACKET

  124 function: FN id LPAREN fn_params_seq RPAREN block
  125         | FN id LPAREN fn_params_seq RPAREN OBJECTACCESS type block

  126 fn_call: id LPAREN fn_args RPAREN

  127 fn_args: fn_arg fn_args
  128        | %empty

  129 fn_arg: fn_arg COMMA
  130       | lit
  131       | id
  132       | box_new
  133       | fn_call
  134       | arg_struct

  135 lit: p_lit
  136    | enum_con

  137 p_lit: LITDEC
  138      | LITCHAR
  139      | LITBOOL
  140      | LITSTRING

  141 id: ID

  142 fn_params_seq: fn_params
  143              | %empty

  144 fn_params: fn_param COMMA fn_params
  145          | fn_param

  146 fn_param: pat COLON type
  147         | pat COLON id

  148 types: type COMMA types
  149      | type

  150 type: BOOL
  151     | UEIGHT
  152     | USIXTEEN
  153     | UTHREETWO
  154     | USIXFOUR
  155     | IEIGHT
  156     | ISIXTEEN
  157     | ITHREETWO
  158     | ISIXFOUR
  159     | FTHREETWO
  160     | FSIXFOUR
  161     | CHAR
  162     | STR
  163     | box
  164     | NOT
  165     | type_ref
  166     | id
  167     | AND MUT type
  168     | type_arr
  169     | LPAREN RPAREN
  170     | %empty

  171 type_arr: LBRACKET type RBRACKET
  172         | LBRACKET type SEMICOLON p_lit RBRACKET

  173 type_ref: AND type

  174 box: BOX LESSTHAN type GREATERTHAN

  175 box_new: BOX CLASSACCESS NEW LPAREN exp RPAREN

  176 struct: STRUCT id LSQUIGBRACKET field_defs RSQUIGBRACKET

  177 field_defs: field_def field_defs
  178           | field_def

  179 field_def: field_def COMMA
  180          | id COLON type

  181 block: LSQUIGBRACKET stmts RSQUIGBRACKET

  182 return: RETURN
  183       | return exp

  184 arg_struct: id LSQUIGBRACKET body RSQUIGBRACKET

  185 body: param_arg body
  186     | param_arg

  187 param_arg: param_arg COMMA
  188          | id COLON exp

  189 enum_con: enum_con LPAREN exps RPAREN
  190         | id CLASSACCESS id

  191 pat_enum: pat_enum LPAREN pats RPAREN
  192         | id CLASSACCESS id

  193 enum: ENUM id LSQUIGBRACKET enum_params RSQUIGBRACKET

  194 enum_params: enum_param enum_params
  195            | %empty

  196 enum_param: enum_param COMMA
  197           | enum_param LPAREN types RPAREN
  198           | id


Terminals, with rules where they appear

$end (0) 0
error (256)
LITCHAR (258) 138
LITSTRING (259) 140
LITDEC (260) 137
LITBOOL (261) 139
ID (262) 141
NEW (263) 175
ABSTRACT (264)
ALIGNOF (265)
AS (266)
BE (267)
BOX (268) 174 175
BREAK (269)
CONST (270)
CONTINUE (271)
CRATE (272)
DO (273)
ELSE (274) 96
ENUM (275) 193
EXTERN (276)
FALSE (277)
FINAL (278)
FN (279) 124 125
FOR (280)
IF (281) 95
IMPL (282)
IN (283)
LET (284) 88 89 90 91
LOOP (285) 94
MACRO (286)
MACRO_RULES (287)
MATCH (288) 97
MOD (289)
MOVE (290)
MUT (291) 77 78 111 112 167
OFFSETOF (292)
OVERRIDE (293)
PRIV (294)
PUB (295)
PURE (296)
REF (297) 110 111
RETURN (298) 182
SIZEOF (299)
STATIC (300)
SELF (301)
STRUCT (302) 176
SUPER (303)
TRUE (304)
TRAIT (305)
TYPE (306)
TYPEOF (307)
UNSAFE (308)
UNSIZED (309)
USE (310)
VIRTUAL (311)
WHERE (312)
WHILE (313) 93
YIELD (314)
BOOL (315) 150
UEIGHT (316) 151
USIXTEEN (317) 152
UTHREETWO (318) 153
USIXFOUR (319) 154
IEIGHT (320) 155
ISIXTEEN (321) 156
ITHREETWO (322) 157
ISIXFOUR (323) 158
FTHREETWO (324) 159
FSIXFOUR (325) 160
USIZE (326)
ISIZE (327)
CHAR (328) 161
STR (329) 162
CLASSACCESS (330) 175 190 192
OBJECTACCESS (331) 125
PIPE (332) 100
POUND (333)
POUNDEXCLAMATION (334)
APOSTRAPHE (335)
DOLLAR (336)
LBRACKET (337) 117 122 123 171 172
RBRACKET (338) 117 122 123 171 172
LPAREN (339) 17 38 79 93 95 97 106 124 125 126 169 175 189 191 197
RPAREN (340) 17 38 79 93 95 97 106 124 125 126 169 175 189 191 197
LSQUIGBRACKET (341) 97 118 176 181 184 193
RSQUIGBRACKET (342) 97 118 176 181 184 193
COMMA (343) 15 98 103 119 129 144 148 179 187 196
SEMICOLON (344) 8 172
COLON (345) 88 89 121 146 147 180 188
SUB (346) 47 51 108
MUL (347) 48 75 76
NOT (348) 69 164
ADD (349) 46
DIV (350) 49
MODOP (351) 50
AND (352) 73 74 77 78 113 167 173
OR (353) 101
EXCLUSIVEOR (354)
LEFTSHIFT (355)
RIGHTSHIFT (356)
WILDCARD (357)
THREEDOTS (358)
LOGICALOR (359) 67
LOGICALAND (360) 68
EQUALTO (361) 65
NOTEQUAL (362) 66
LESSTHAN (363) 61 174
GREATERTHAN (364) 63 174
LESSTHANOREQUAL (365) 62
GREATERTHANOREQUAL (366) 64
PLUSEQUAL (367) 81
SUBEQUAL (368) 82
TIMESEQUAL (369) 84
DIVEQUAL (370) 83
MODEQUAL (371) 85
ANDEQUAL (372) 86
OREQUAL (373) 87
EXCLUSIVEOREQUAL (374)
LEFTSHIFTEQUAL (375)
RIGHTSHIFTEQUAL (376)
UNKNOWN (377)
EQU (378) 80 88 90
PERIOD (379) 92
WC (380) 107


Nonterminals, with rules where they appear

$accept (126)
    on left: 0
crate (127)
    on left: 1, on right: 0
items (128)
    on left: 2 3 4, on right: 1 2
item (129)
    on left: 5 6 7, on right: 2 3
stmts (130)
    on left: 8 9 10, on right: 8 181
stmt (131)
    on left: 11 12 13 14, on right: 8 9
exps (132)
    on left: 15 16, on right: 15 122 189
exp (133)
    on left: 17 18 19 20 21 22 23 24 25 26 27 28 29, on right: 12 15
    16 17 80 81 82 83 84 85 86 87 88 90 92 93 95 97 123 175 183 188
arith1 (134)
    on left: 30 31 32, on right: 18 38 46 47 48 49 50 61 62 63 64 65
    66 67 68 69
arith2 (135)
    on left: 33 34 35 36 37, on right: 32
arith3 (136)
    on left: 38 39 40 41 42, on right: 37
arith4 (137)
    on left: 43 44 45, on right: 42 51 73 75 77
add (138)
    on left: 46, on right: 30
sub (139)
    on left: 47, on right: 31
mul (140)
    on left: 48, on right: 33
div (141)
    on left: 49, on right: 34
mod (142)
    on left: 50, on right: 35
neg (143)
    on left: 51, on right: 36 74 76 78
comp (144)
    on left: 52 53 54 55 56 57 58 59 60, on right: 40
lt (145)
    on left: 61, on right: 52
leq (146)
    on left: 62, on right: 53
gt (147)
    on left: 63, on right: 54
geq (148)
    on left: 64, on right: 55
eq (149)
    on left: 65, on right: 56
neq (150)
    on left: 66, on right: 57
or (151)
    on left: 67, on right: 58
and (152)
    on left: 68, on right: 59
not (153)
    on left: 69, on right: 60
ptr (154)
    on left: 70 71 72, on right: 44
addr (155)
    on left: 73 74, on right: 70
deref (156)
    on left: 75 76, on right: 71
addr_of_mut (157)
    on left: 77 78, on right: 72
unit (158)
    on left: 79, on right: 28
assign (159)
    on left: 80 81 82 83 84 85 86 87, on right: 25
let (160)
    on left: 88 89 90 91, on right: 13
field_lookup (161)
    on left: 92, on right: 41
while (162)
    on left: 93, on right: 20
loop (163)
    on left: 94, on right: 19
if (164)
    on left: 95 96, on right: 22 96
match (165)
    on left: 97, on right: 23
match_arms (166)
    on left: 98 99, on right: 97 98
match_arm (167)
    on left: 100, on right: 98 99
match_pats (168)
    on left: 101 102, on right: 100 101
pats (169)
    on left: 103 104, on right: 103 117 191
pat (170)
    on left: 105 106 107 108 109 110 111 112 113 114 115 116, on right:
    88 89 90 91 101 102 103 104 113 121 146 147
pat_arr (171)
    on left: 117, on right: 114
pat_struct (172)
    on left: 118, on right: 116
pat_fields (173)
    on left: 119 120, on right: 118 119
pat_field (174)
    on left: 121, on right: 119 120
arr (175)
    on left: 122, on right: 26
arr_index (176)
    on left: 123, on right: 27
function (177)
    on left: 124 125, on right: 5 14
fn_call (178)
    on left: 126, on right: 39 133
fn_args (179)
    on left: 127 128, on right: 126 127
fn_arg (180)
    on left: 129 130 131 132 133 134, on right: 127 129
lit (181)
    on left: 135 136, on right: 45 130
p_lit (182)
    on left: 137 138 139 140, on right: 105 108 135 172
id (183)
    on left: 141, on right: 43 92 109 110 111 112 118 121 124 125 126
    131 147 166 176 180 184 188 190 192 193 198
fn_params_seq (184)
    on left: 142 143, on right: 124 125
fn_params (185)
    on left: 144 145, on right: 142 144
fn_param (186)
    on left: 146 147, on right: 144 145
types (187)
    on left: 148 149, on right: 148 197
type (188)
    on left: 150 151 152 153 154 155 156 157 158 159 160 161 162 163
    164 165 166 167 168 169 170, on right: 88 89 125 146 148 149 167
    171 172 173 174 180
type_arr (189)
    on left: 171 172, on right: 168
type_ref (190)
    on left: 173, on right: 165
box (191)
    on left: 174, on right: 163
box_new (192)
    on left: 175, on right: 21 132
struct (193)
    on left: 176, on right: 6
field_defs (194)
    on left: 177 178, on right: 176 177
field_def (195)
    on left: 179 180, on right: 177 178 179
block (196)
    on left: 181, on right: 93 94 95 96 100 124 125
return (197)
    on left: 182 183, on right: 11 183
arg_struct (198)
    on left: 184, on right: 24 134
body (199)
    on left: 185 186, on right: 184 185
param_arg (200)
    on left: 187 188, on right: 185 186 187
enum_con (201)
    on left: 189 190, on right: 136 189
pat_enum (202)
    on left: 191 192, on right: 115 191
enum (203)
    on left: 193, on right: 7
enum_params (204)
    on left: 194 195, on right: 193 194
enum_param (205)
    on left: 196 197 198, on right: 194 196 197


State 0

    0 $accept: . crate $end

    ENUM    shift, and go to state 1
    FN      shift, and go to state 2
    STRUCT  shift, and go to state 3

    $default  reduce using rule 4 (items)

    crate     go to state 4
    items     go to state 5
    item      go to state 6
    function  go to state 7
    struct    go to state 8
    enum      go to state 9


State 1

  193 enum: ENUM . id LSQUIGBRACKET enum_params RSQUIGBRACKET

    ID  shift, and go to state 10

    id  go to state 11


State 2

  124 function: FN . id LPAREN fn_params_seq RPAREN block
  125         | FN . id LPAREN fn_params_seq RPAREN OBJECTACCESS type block

    ID  shift, and go to state 10

    id  go to state 12


State 3

  176 struct: STRUCT . id LSQUIGBRACKET field_defs RSQUIGBRACKET

    ID  shift, and go to state 10

    id  go to state 13


State 4

    0 $accept: crate . $end

    $end  shift, and go to state 14


State 5

    1 crate: items .

    $default  reduce using rule 1 (crate)


State 6

    2 items: item . items
    3      | item .

    ENUM    shift, and go to state 1
    FN      shift, and go to state 2
    STRUCT  shift, and go to state 3

    $end      reduce using rule 3 (items)
    $end      [reduce using rule 4 (items)]
    $default  reduce using rule 3 (items)

    items     go to state 15
    item      go to state 6
    function  go to state 7
    struct    go to state 8
    enum      go to state 9


State 7

    5 item: function .

    $default  reduce using rule 5 (item)


State 8

    6 item: struct .

    $default  reduce using rule 6 (item)


State 9

    7 item: enum .

    $default  reduce using rule 7 (item)


State 10

  141 id: ID .

    $default  reduce using rule 141 (id)


State 11

  193 enum: ENUM id . LSQUIGBRACKET enum_params RSQUIGBRACKET

    LSQUIGBRACKET  shift, and go to state 16


State 12

  124 function: FN id . LPAREN fn_params_seq RPAREN block
  125         | FN id . LPAREN fn_params_seq RPAREN OBJECTACCESS type block

    LPAREN  shift, and go to state 17


State 13

  176 struct: STRUCT id . LSQUIGBRACKET field_defs RSQUIGBRACKET

    LSQUIGBRACKET  shift, and go to state 18


State 14

    0 $accept: crate $end .

    $default  accept


State 15

    2 items: item items .

    $default  reduce using rule 2 (items)


State 16

  193 enum: ENUM id LSQUIGBRACKET . enum_params RSQUIGBRACKET

    ID  shift, and go to state 10

    $default  reduce using rule 195 (enum_params)

    id           go to state 19
    enum_params  go to state 20
    enum_param   go to state 21


State 17

  124 function: FN id LPAREN . fn_params_seq RPAREN block
  125         | FN id LPAREN . fn_params_seq RPAREN OBJECTACCESS type block

    LITCHAR    shift, and go to state 22
    LITSTRING  shift, and go to state 23
    LITDEC     shift, and go to state 24
    LITBOOL    shift, and go to state 25
    ID         shift, and go to state 10
    MUT        shift, and go to state 26
    REF        shift, and go to state 27
    LBRACKET   shift, and go to state 28
    LPAREN     shift, and go to state 29
    SUB        shift, and go to state 30
    AND        shift, and go to state 31
    WC         shift, and go to state 32

    $default  reduce using rule 143 (fn_params_seq)

    pat            go to state 33
    pat_arr        go to state 34
    pat_struct     go to state 35
    p_lit          go to state 36
    id             go to state 37
    fn_params_seq  go to state 38
    fn_params      go to state 39
    fn_param       go to state 40
    pat_enum       go to state 41


State 18

  176 struct: STRUCT id LSQUIGBRACKET . field_defs RSQUIGBRACKET

    ID  shift, and go to state 10

    id          go to state 42
    field_defs  go to state 43
    field_def   go to state 44


State 19

  198 enum_param: id .

    $default  reduce using rule 198 (enum_param)


State 20

  193 enum: ENUM id LSQUIGBRACKET enum_params . RSQUIGBRACKET

    RSQUIGBRACKET  shift, and go to state 45


State 21

  194 enum_params: enum_param . enum_params
  196 enum_param: enum_param . COMMA
  197           | enum_param . LPAREN types RPAREN

    ID      shift, and go to state 10
    LPAREN  shift, and go to state 46
    COMMA   shift, and go to state 47

    $default  reduce using rule 195 (enum_params)

    id           go to state 19
    enum_params  go to state 48
    enum_param   go to state 21


State 22

  138 p_lit: LITCHAR .

    $default  reduce using rule 138 (p_lit)


State 23

  140 p_lit: LITSTRING .

    $default  reduce using rule 140 (p_lit)


State 24

  137 p_lit: LITDEC .

    $default  reduce using rule 137 (p_lit)


State 25

  139 p_lit: LITBOOL .

    $default  reduce using rule 139 (p_lit)


State 26

  112 pat: MUT . id

    ID  shift, and go to state 10

    id  go to state 49


State 27

  110 pat: REF . id
  111    | REF . MUT id

    ID   shift, and go to state 10
    MUT  shift, and go to state 50

    id  go to state 51


State 28

  117 pat_arr: LBRACKET . pats RBRACKET

    LITCHAR    shift, and go to state 22
    LITSTRING  shift, and go to state 23
    LITDEC     shift, and go to state 24
    LITBOOL    shift, and go to state 25
    ID         shift, and go to state 10
    MUT        shift, and go to state 26
    REF        shift, and go to state 27
    LBRACKET   shift, and go to state 28
    LPAREN     shift, and go to state 29
    SUB        shift, and go to state 30
    AND        shift, and go to state 31
    WC         shift, and go to state 32

    pats        go to state 52
    pat         go to state 53
    pat_arr     go to state 34
    pat_struct  go to state 35
    p_lit       go to state 36
    id          go to state 37
    pat_enum    go to state 41


State 29

  106 pat: LPAREN . RPAREN

    RPAREN  shift, and go to state 54


State 30

  108 pat: SUB . p_lit

    LITCHAR    shift, and go to state 22
    LITSTRING  shift, and go to state 23
    LITDEC     shift, and go to state 24
    LITBOOL    shift, and go to state 25

    p_lit  go to state 55


State 31

  113 pat: AND . pat

    LITCHAR    shift, and go to state 22
    LITSTRING  shift, and go to state 23
    LITDEC     shift, and go to state 24
    LITBOOL    shift, and go to state 25
    ID         shift, and go to state 10
    MUT        shift, and go to state 26
    REF        shift, and go to state 27
    LBRACKET   shift, and go to state 28
    LPAREN     shift, and go to state 29
    SUB        shift, and go to state 30
    AND        shift, and go to state 31
    WC         shift, and go to state 32

    pat         go to state 56
    pat_arr     go to state 34
    pat_struct  go to state 35
    p_lit       go to state 36
    id          go to state 37
    pat_enum    go to state 41


State 32

  107 pat: WC .

    $default  reduce using rule 107 (pat)


State 33

  146 fn_param: pat . COLON type
  147         | pat . COLON id

    COLON  shift, and go to state 57


State 34

  114 pat: pat_arr .

    $default  reduce using rule 114 (pat)


State 35

  116 pat: pat_struct .

    $default  reduce using rule 116 (pat)


State 36

  105 pat: p_lit .

    $default  reduce using rule 105 (pat)


State 37

  109 pat: id .
  118 pat_struct: id . LSQUIGBRACKET pat_fields RSQUIGBRACKET
  192 pat_enum: id . CLASSACCESS id

    CLASSACCESS    shift, and go to state 58
    LSQUIGBRACKET  shift, and go to state 59

    $default  reduce using rule 109 (pat)


State 38

  124 function: FN id LPAREN fn_params_seq . RPAREN block
  125         | FN id LPAREN fn_params_seq . RPAREN OBJECTACCESS type block

    RPAREN  shift, and go to state 60


State 39

  142 fn_params_seq: fn_params .

    $default  reduce using rule 142 (fn_params_seq)


State 40

  144 fn_params: fn_param . COMMA fn_params
  145          | fn_param .

    COMMA  shift, and go to state 61

    $default  reduce using rule 145 (fn_params)


State 41

  115 pat: pat_enum .
  191 pat_enum: pat_enum . LPAREN pats RPAREN

    LPAREN  shift, and go to state 62

    $default  reduce using rule 115 (pat)


State 42

  180 field_def: id . COLON type

    COLON  shift, and go to state 63


State 43

  176 struct: STRUCT id LSQUIGBRACKET field_defs . RSQUIGBRACKET

    RSQUIGBRACKET  shift, and go to state 64


State 44

  177 field_defs: field_def . field_defs
  178           | field_def .
  179 field_def: field_def . COMMA

    ID     shift, and go to state 10
    COMMA  shift, and go to state 65

    $default  reduce using rule 178 (field_defs)

    id          go to state 42
    field_defs  go to state 66
    field_def   go to state 44


State 45

  193 enum: ENUM id LSQUIGBRACKET enum_params RSQUIGBRACKET .

    $default  reduce using rule 193 (enum)


State 46

  197 enum_param: enum_param LPAREN . types RPAREN

    ID         shift, and go to state 10
    BOX        shift, and go to state 67
    BOOL       shift, and go to state 68
    UEIGHT     shift, and go to state 69
    USIXTEEN   shift, and go to state 70
    UTHREETWO  shift, and go to state 71
    USIXFOUR   shift, and go to state 72
    IEIGHT     shift, and go to state 73
    ISIXTEEN   shift, and go to state 74
    ITHREETWO  shift, and go to state 75
    ISIXFOUR   shift, and go to state 76
    FTHREETWO  shift, and go to state 77
    FSIXFOUR   shift, and go to state 78
    CHAR       shift, and go to state 79
    STR        shift, and go to state 80
    LBRACKET   shift, and go to state 81
    LPAREN     shift, and go to state 82
    NOT        shift, and go to state 83
    AND        shift, and go to state 84

    $default  reduce using rule 170 (type)

    id        go to state 85
    types     go to state 86
    type      go to state 87
    type_arr  go to state 88
    type_ref  go to state 89
    box       go to state 90


State 47

  196 enum_param: enum_param COMMA .

    $default  reduce using rule 196 (enum_param)


State 48

  194 enum_params: enum_param enum_params .

    $default  reduce using rule 194 (enum_params)


State 49

  112 pat: MUT id .

    $default  reduce using rule 112 (pat)


State 50

  111 pat: REF MUT . id

    ID  shift, and go to state 10

    id  go to state 91


State 51

  110 pat: REF id .

    $default  reduce using rule 110 (pat)


State 52

  117 pat_arr: LBRACKET pats . RBRACKET

    RBRACKET  shift, and go to state 92


State 53

  103 pats: pat . COMMA pats
  104     | pat .

    COMMA  shift, and go to state 93

    $default  reduce using rule 104 (pats)


State 54

  106 pat: LPAREN RPAREN .

    $default  reduce using rule 106 (pat)


State 55

  108 pat: SUB p_lit .

    $default  reduce using rule 108 (pat)


State 56

  113 pat: AND pat .

    $default  reduce using rule 113 (pat)


State 57

  146 fn_param: pat COLON . type
  147         | pat COLON . id

    ID         shift, and go to state 10
    BOX        shift, and go to state 67
    BOOL       shift, and go to state 68
    UEIGHT     shift, and go to state 69
    USIXTEEN   shift, and go to state 70
    UTHREETWO  shift, and go to state 71
    USIXFOUR   shift, and go to state 72
    IEIGHT     shift, and go to state 73
    ISIXTEEN   shift, and go to state 74
    ITHREETWO  shift, and go to state 75
    ISIXFOUR   shift, and go to state 76
    FTHREETWO  shift, and go to state 77
    FSIXFOUR   shift, and go to state 78
    CHAR       shift, and go to state 79
    STR        shift, and go to state 80
    LBRACKET   shift, and go to state 81
    LPAREN     shift, and go to state 82
    NOT        shift, and go to state 83
    AND        shift, and go to state 84

    $default  reduce using rule 170 (type)

    id        go to state 94
    type      go to state 95
    type_arr  go to state 88
    type_ref  go to state 89
    box       go to state 90


State 58

  192 pat_enum: id CLASSACCESS . id

    ID  shift, and go to state 10

    id  go to state 96


State 59

  118 pat_struct: id LSQUIGBRACKET . pat_fields RSQUIGBRACKET

    ID  shift, and go to state 10

    pat_fields  go to state 97
    pat_field   go to state 98
    id          go to state 99


State 60

  124 function: FN id LPAREN fn_params_seq RPAREN . block
  125         | FN id LPAREN fn_params_seq RPAREN . OBJECTACCESS type block

    OBJECTACCESS   shift, and go to state 100
    LSQUIGBRACKET  shift, and go to state 101

    block  go to state 102


State 61

  144 fn_params: fn_param COMMA . fn_params

    LITCHAR    shift, and go to state 22
    LITSTRING  shift, and go to state 23
    LITDEC     shift, and go to state 24
    LITBOOL    shift, and go to state 25
    ID         shift, and go to state 10
    MUT        shift, and go to state 26
    REF        shift, and go to state 27
    LBRACKET   shift, and go to state 28
    LPAREN     shift, and go to state 29
    SUB        shift, and go to state 30
    AND        shift, and go to state 31
    WC         shift, and go to state 32

    pat         go to state 33
    pat_arr     go to state 34
    pat_struct  go to state 35
    p_lit       go to state 36
    id          go to state 37
    fn_params   go to state 103
    fn_param    go to state 40
    pat_enum    go to state 41


State 62

  191 pat_enum: pat_enum LPAREN . pats RPAREN

    LITCHAR    shift, and go to state 22
    LITSTRING  shift, and go to state 23
    LITDEC     shift, and go to state 24
    LITBOOL    shift, and go to state 25
    ID         shift, and go to state 10
    MUT        shift, and go to state 26
    REF        shift, and go to state 27
    LBRACKET   shift, and go to state 28
    LPAREN     shift, and go to state 29
    SUB        shift, and go to state 30
    AND        shift, and go to state 31
    WC         shift, and go to state 32

    pats        go to state 104
    pat         go to state 53
    pat_arr     go to state 34
    pat_struct  go to state 35
    p_lit       go to state 36
    id          go to state 37
    pat_enum    go to state 41


State 63

  180 field_def: id COLON . type

    ID         shift, and go to state 10
    BOX        shift, and go to state 67
    BOOL       shift, and go to state 68
    UEIGHT     shift, and go to state 69
    USIXTEEN   shift, and go to state 70
    UTHREETWO  shift, and go to state 71
    USIXFOUR   shift, and go to state 72
    IEIGHT     shift, and go to state 73
    ISIXTEEN   shift, and go to state 74
    ITHREETWO  shift, and go to state 75
    ISIXFOUR   shift, and go to state 76
    FTHREETWO  shift, and go to state 77
    FSIXFOUR   shift, and go to state 78
    CHAR       shift, and go to state 79
    STR        shift, and go to state 80
    LBRACKET   shift, and go to state 81
    LPAREN     shift, and go to state 82
    NOT        shift, and go to state 83
    AND        shift, and go to state 84

    ID        [reduce using rule 170 (type)]
    $default  reduce using rule 170 (type)

    id        go to state 85
    type      go to state 105
    type_arr  go to state 88
    type_ref  go to state 89
    box       go to state 90


State 64

  176 struct: STRUCT id LSQUIGBRACKET field_defs RSQUIGBRACKET .

    $default  reduce using rule 176 (struct)


State 65

  179 field_def: field_def COMMA .

    $default  reduce using rule 179 (field_def)


State 66

  177 field_defs: field_def field_defs .

    $default  reduce using rule 177 (field_defs)


State 67

  174 box: BOX . LESSTHAN type GREATERTHAN

    LESSTHAN  shift, and go to state 106


State 68

  150 type: BOOL .

    $default  reduce using rule 150 (type)


State 69

  151 type: UEIGHT .

    $default  reduce using rule 151 (type)


State 70

  152 type: USIXTEEN .
